Attempting to fix backgrounds on mobile

--- a/css/trillium-ipad.css
+++ b/css/trillium-ipad.css
@@ -155,15 +155,12 @@ a {
 	min-height: 70%;
 	height: 70%;
 	overflow: hidden;
-	background-attachment: fixed;
+	background-attachment: scroll;
 	background-repeat: no-repeat;
 	background-position: center center;
 	z-index: 1;
 
-	background-size: cover;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
+	background-size: 100%;
 }
 
 @media only screen and (min-width: 768px) {
@@ -196,7 +193,7 @@ a {
 
 .attribution {
 	position: absolute;
-	font-size: xx-large;
+	font-size: xx-small;
 	bottom: 0;
 	right: 0;
 	color: rgb(255, 255, 255);
